# Jarvis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  MANIFEST.in  README.md  __init__.py  alarm.py  build_local.sh  calendar.scpt  creds.py  custom_recognizer.py  database.py  docker-compose.yml  facial_recognition.py  gen_docs.sh  installs.sh  installs_windows.sh  jarvis.py  keywords.py  logger.py  meetings.scpt  outlook.scpt  pre_commit.py  pre_commit.sh  pyproject.toml  release_notes.rst  reminder.py  restart.py  robinhood.py  runbook_coverage.py  setup.cfg  setup.py  speech2text.py  text2audio.py  tv_controls.py  update-toml.py  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-or-inquiries.md
.github/workflows/: cleanup.yml  codeql.yml  docs.yml  issue.yml  markdown-validation.yml  markdown.yml  matrix-publisher.yml  python-publish.yml  release.yml  release_notes.yml  version.yml
_preexec/: keywords_handler.py
api/: api_squire.py  authenticator.py  controller.py  cron.py  fast.py  filters.py  market_hours.py  models.py  report_gatherer.py  rh_helper.py  robinhood.py  robinhood_template.py  scheduler.py  server.py  settings.py  squire.py  static.html  stock_monitor.py  timeout_otp.py
api/modals/: models.py
api/routers/: basics.py  fileio.py  helper.py  investment.py  offline.py  speech_synthesis.py  stock_monitor.py  surveillance.py
api/squire/: discover.py  logger.py  scheduler.py  stockmonitor_squire.py  surveillance_squire.py  timeout_otp.py
api/triggers/: stock_monitor.py  stock_report.py
dev_scripts/: __init__.py  api_v2.py  dependencies.py  display.py  version.py
doc_generator/: conf.py  index.rst  static.css
doc_generator/_static/: theme.css
docs/: CNAME  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
docs/_static/: basic.css  static.css
docs_gen/: conf.py  index.rst
executors/: alarm.py  automation.py  background_tasks.py  bluetooth.py  car.py  comm_squire.py  commander.py  communicator.py  conditions.py  connection.py  controls.py  crontab.py  currenttime.py  custom_logger.py  date_time.py  display_functions.py  face.py  garage.py  github.py  guard.py  internet.py  ios_functions.py  lights.py  lights_squire.py  listener_controls.py  location.py  logger.py  meetings.py  myq_controller.py  offline.py  others.py  personalcloud.py  port_handler.py  processor.py  remind.py  revive.py  robinhood.py  simulator.py  sms.py  splitter.py  (+12 more)
fileio/: applauncher.scpt
helper_functions/: alarm.py  aws_clients.py  car_connector.py  car_controller.py  communicator.py  conversation.py  database.py  emailer.py  facial_recognition.py  ip_scanner.py  keywords.py  lights.py  logger.py  modules.py  notify.py  personal_cloud.py  preset_values.py  put_param.py  reminder.py  robinhood.py  temperature.py  tv_controls.py
helpers/: support.py
jarvis/: __init__.py  main.py
jarvis/_preexec/: keywords_handler.py
jarvis/api/: entrypoint.py  fast.py  logger.py  main.py  server.py
jarvis/executors/: alarm.py  automation.py  background_task.py  background_tasks.py  car.py  ciphertext.py  comm_squire.py  commander.py  communicator.py  conditions.py  connection.py  connectivity.py  controls.py  crontab.py  custom_conditions.py  date_time.py  display_functions.py  face.py  files.py  functions.py  github.py  guard.py  internet.py  ios_functions.py  lights.py  lights_squire.py  listener_controls.py  location.py  method.py  myq_controller.py  offline.py  others.py  port_handler.py  process_map.py  processor.py  remind.py  resource_tracker.py  restrictions.py  robinhood.py  secure_send.py  (+16 more)
jarvis/lib/: install.py  install.sh  install_darwin.sh  install_linux.sh  install_windows.sh  installer.py  version_locked_requirements.txt  version_pinned_requirements.txt  version_upgrade_requirements.txt
jarvis/modules/: auth_bearer.py  builtin_overrides.py  exceptions.py  logger.py  peripherals.py  responder.py
jarvis/scripts/: calendar.scpt
keep_alive/: macOS.py
lib/: install.sh  install_mac.sh  install_windows.sh  installs.sh  installs_windows.sh  mac_requirements.txt  requirements.txt  version_locked_requirements.txt  version_upgrade_requirements.txt  win_requirements.txt
modules/: auth_bearer.py  exceptions.py  peripherals.py
modules/audio/: listener.py  speaker.py  speech_synthesis.py  tts_stt.py  voices.py  volume.py  win_volume.py
modules/camera/: camera.py
modules/car/: car_connector.py  car_controller.py  connector.py  controller.py
modules/conditions/: conversation.py  keywords.py  keywords_base.py
modules/crontab/: expression.py
modules/database/: database.py
modules/dictionary/: dictionary.py
modules/face/: facial_recognition.py
modules/facenet/: face.py
modules/gmail/: sms.py
modules/lights/: lights.py  preset_values.py  smart_lights.py
modules/logger/: config.py  custom_logger.py  logger.py
modules/meeting/: meetings_helper.py
modules/meetings/: events.py  icalendar.py
modules/microphone/: graph_mic.py  mic.py  recognizer.py
modules/models/: classes.py  config.py  models.py
modules/myq/: connector.py  myq.py
modules/netgear/: ip_scanner.py
modules/notifications/: notify.py
modules/offline/: compatibles.py
modules/personalcloud/: pc_handler.py  personal_cloud.py
modules/retry/: retry.py
modules/robinhood/: robinhood.py
modules/speaker/: speak.py
modules/tasks/: tasks.py
modules/telegram/: audio_handler.py  bot.py  file_handler.py
modules/temperature/: temperature.py
modules/templates/: email_OTP.html  monitor.html  robinhood.html  stock_monitor.html  stock_monitor_OTP.html  templates.py  threat_no_audio.html
modules/timeout/: responder.py  timeout.py
modules/timer/: executor.py  repeated_timer.py
modules/tv/: lg.py  roku.py  tv_controls.py
tests/: api_test.py  apitest.py  constant_test.py  listener_test.py  main.py  main_test.py  speaker_test.py  speech_synthesis_test.py  test_listener.py  test_main.py  test_speaker.py  test_speech_synthesis.py
(+122 files in other folders)
