[project]
name = "jarvis-ironman"
dynamic = ["version"]
description = "Voice-Activated Natural Language UI"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Wireless Controller",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
    "Framework :: AnyIO",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Framework :: Setuptools Plugin",
    "Framework :: aiohttp",
    "Natural Language :: English"
]
keywords = ["python", "home-automation", "natural-language-processing", "text-to-speech",
            "speech-recognition", "jarvis", "hotword-detection", "virtual-assistant"]
requires-python = ">=3.10,<3.12"  # Only 3.10 and 3.11 are supported

[tool.setuptools]
# packages section includes the directories with ONLY '.py' modules
packages     = ["jarvis", "jarvis._preexec", "jarvis.executors"]
script-files = [
    "jarvis/lib/install_darwin.sh",
    "jarvis/lib/install_linux.sh",
    "jarvis/lib/install_windows.sh",
]

[tool.setuptools.dynamic]
version      = {attr = "jarvis.version"}

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
jarvis = "jarvis:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark", "pytest"]

[project.urls]
API             = "https://jarvis.vigneshrao.com"
Health          = "https://jarvis-health.vigneshrao.com"
Homepage        = "https://github.com/thevickypedia/Jarvis"
Docs            = "https://jarvis-docs.vigneshrao.com"
Demo            = "https://vigneshrao.com/Jarvis/Jarvis_Demo.mp4"
Source          = "https://github.com/thevickypedia/Jarvis"
"Bug Tracker"   = "https://github.com/thevickypedia/Jarvis/issues"
"Release Notes" = "https://github.com/thevickypedia/Jarvis/blob/master/release_notes.rst"
