[metadata]
name = Jarvis
version = attr: version
description = "IronMan's Jarvis with python.",
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/thevickypedia/Jarvis

[bdist_wheel]
universal = 1

[options]
packages = find:

[flake8]
ignore = D100
max_line_length = 100
exclude =
    __init__.py  # this is generally an empty file.
    doc_generator
    docs
    venv
    gen_docs.sh

# install flake8-docstrings
docstring_convention = google

# install flake8-sfs
extend_ignore=SFS3,D107,SFS301,D100,D104,D401

[isort]
